# SkyPro_project3.1

./: .coverage  README.md  pyproject.toml
src/: main.py  processing.py  widget.py
tests/: conftest.py  test_main.py
